auth-core library code cleanup - replace deprecated calls, etc (#2297)
Signed-off-by: Henry Avetisyan <hga@yahooinc.com>
Co-authored-by: Henry Avetisyan <hga@yahooinc.com>